changed build.sh params